[package]
name = "mio-uds-windows"
version       = "0.0.1"
license       = "MIT"
authors       = ["Damon Barry"]
description   = ""
documentation = "https://github.com/damonbarry/mio-uds-windows"
homepage      = "https://github.com/damonbarry/mio-uds-windows"
repository    = "https://github.com/damonbarry/mio-uds-windows"
readme        = "README.md"
exclude       = [
  ".gitignore",
]

[dependencies]
mio = "0.6"
lazycell = "1"
log  = "0.4"
slab = "0.4.0"
net2 = "0.2.29"
iovec = "0.1.1"

[target.'cfg(windows)'.dependencies]
winapi = "0.2.6"
miow = "0.2.1"
kernel32-sys = "0.2"
ws2_32-sys = "0.2"

[dev-dependencies]
env_logger = { version = "0.4.0", default-features = false }
tempdir    = "0.3.4"
bytes      = "0.3.0"

[[test]]
name = "test"
path = "test/mod.rs"
